[tool.poetry]
name = "apps.gt.api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "api", from = ".."}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
"packages.geoip" = {path = "../../../packages/geoip", develop = true}
"packages.datetime_utils" = {path = "../../../packages/datetime_utils", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
